# chowdsp_utils

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  chowdsp_utils.cpp  chowdsp_utils.h  codecov.yml  sonar-project.properties  test.sh
bench/: AbstractTreeBench.cpp  BufferBench.cpp  CMakeLists.txt  ConcurrentScanningBench.cpp  DecibelsBench.cpp  FIRFilterBench.cpp  FloatVectorOperationsBench.cpp  IIRFilterBench.cpp  LookupTableBench.cpp  MatrixOpsBench.cpp  PolynomialBench.cpp  PowerBench.cpp  TrigBench.cpp  WDFvsIIRBench.cpp  bench_utils.h
examples/: CMakeLists.txt  README.md
examples/AccessiblePlugin/: AccessiblePlugin.cpp  AccessiblePlugin.h  AccessiblePluginEditor.cpp  AccessiblePluginEditor.h  CMakeLists.txt  TabbedComponent.h
examples/AutoWah/: AutoWahPlugin.cpp  AutoWahPlugin.h  CMakeLists.txt  chowdsp_ModFilterWrapper.h
examples/ExampleCompressor/: CMakeLists.txt  ExampleCompressor.cpp  ExampleCompressor.h  Params.h  PluginEditor.cpp  PluginEditor.h
examples/ForwardingTestPlugin/: CMakeLists.txt  ForwardingTestPlugin.cpp  ForwardingTestPlugin.h  PluginEditor.cpp  PluginEditor.h
examples/ForwardingTestPlugin/InternalPlugins/: ARPFilterPlugin.cpp  ARPFilterPlugin.h  BandSplitPlugin.cpp  BandSplitPlugin.h  PlateReverb.cpp  PlateReverb.h  PolygonalOscPlugin.cpp  PolygonalOscPlugin.h  PolyphaseOversamplingPlugin.cpp  PolyphaseOversamplingPlugin.h  WernerFilterPlugin.cpp  WernerFilterPlugin.h
examples/LinearPhaseEQ/: CMakeLists.txt  EQParams.h  LinearPhaseEQPlugin.cpp  LinearPhaseEQPlugin.h  PrototypeEQ.cpp  PrototypeEQ.h  chowdsp_LinearPhaseEQ.cpp  chowdsp_LinearPhaseEQ.h
examples/ModalSpringReverb/: CMakeLists.txt  ModalReverbPlugin.cpp  ModalReverbPlugin.h  ModeParams.h  impulse_analysis.py
examples/SignalGenerator/: CMakeLists.txt  SignalGeneratorPlugin.cpp  SignalGeneratorPlugin.h
examples/SimpleEQ/: CMakeLists.txt  EQParams.h  FilterPlots.cpp  FilterPlots.h  PluginEditor.cpp  PluginEditor.h  PrototypeEQ.cpp  PrototypeEQ.h  SimpleEQPlugin.cpp  SimpleEQPlugin.h
examples/SimpleReverb/: CMakeLists.txt  SimpleReverbPlugin.cpp  SimpleReverbPlugin.h
examples/StatefulPlugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  StatefulPlugin.cpp  StatefulPlugin.h
tests/: CMakeLists.txt  DummyPlugin.h  FoleysTest.cpp  GUITest.cpp  GainTest.cpp  ModalFilterTest.cpp  NoiseTest.cpp  OmegaTest.cpp  PannerTest.cpp  PitchShiftTest.cpp  PluginBaseTest.cpp  ShelfFilterTest.cpp  SineTest.cpp  TestGUI.xml  VersionUtilsTest.cpp  WDFTest.cpp  test.cpp  test_utils.h  wdf_standalone_test.cpp
tests/chowdsp_gui_test/: CMakeLists.txt  GUITest.cpp
tests/chowdsp_utils_test/: CMakeLists.txt  DummyPlugin.h  TimedUnitTest.h  test_utils.h
tests/chowdsp_utils_test/dsp_tests/: AudioTimerTest.cpp  BBDTest.cpp  BypassTest.cpp  CMakeLists.txt  ConvolutionTest.cpp  GainTest.cpp  PannerTest.cpp  PitchShiftTest.cpp  PolynomialsTest.cpp  ResamplerTest.cpp  SmoothedBufferValueTest.cpp  SoftClipperTest.cpp  TunerTest.cpp
tests/chowdsp_utils_test/gui_tests/: CMakeLists.txt  FoleysTest.cpp  LongPressActionTest.cpp  OpenGLHelperTest.cpp  OversamplingMenuTest.cpp  PopupMenuHelperTest.cpp  PresetsCompTest.cpp  WindowInPluginTest.cpp
tests/chowdsp_utils_test/utils_tests/: AudioFileSaveLoadHelperTest.cpp  AudioUIBackgroundTaskTest.cpp  CMakeLists.txt  FileListenerTest.cpp  ForwardingParameterTest.cpp  GlobalSettingsTest.cpp  JSONTest.cpp  LNFAllocatorTest.cpp  ParamStringsTest.cpp  PluginBaseTest.cpp  PluginLoggerTest.cpp  PresetManagerTest.cpp  PresetTest.cpp  VersionUtilsTest.cpp
tests/common_tests/: CMakeLists.txt
tests/common_tests/chowdsp_core_test/: AbstractTreeTest.cpp  AtomicHelpersTest.cpp  BindingsTest.cpp  CMakeLists.txt  DoubleBufferTest.cpp  EndOfScopeActionTest.cpp  IteratorsTest.cpp  LocalPointerTest.cpp  MemoryAliasingTest.cpp  OptionalPointerTest.cpp  ScopedValueTest.cpp  SmallVectorTest.cpp  SmartPointerTest.cpp  StringHelpersTest.cpp  StringLiteralTest.cpp  StringViewHelpersTest.cpp  TupleHelpersTest.cpp  TypeCheckersTest.cpp  TypeTraitsTest.cpp  TypesListTest.cpp  VectorHelpersTest.cpp
tests/common_tests/chowdsp_data_structures_test/: AbstractTreeTest.cpp  ArenaAllocatorTest.cpp  ArrayHelpersTest.cpp  BucketArrayTest.cpp  CMakeLists.txt  ChainedArenaAllocatorTest.cpp  ChunkListTest.cpp  DoubleBufferTest.cpp  EnumMapCompleteTest.cpp  EnumMapTest.cpp  FixedSizeFunctionTest.cpp  FlatMemoryPoolTest.cpp  IteratorsTest.cpp  LocalPointerTest.cpp  OptionalArrayTest.cpp  OptionalPointerTest.cpp  OptionalRefTest.cpp  PackedPointerTest.cpp  PoolAllocatorTest.cpp  RawObjectTest.cpp  STLArenaAllocatorTest.cpp  SmallMapTest.cpp  SmallVectorTest.cpp  TupleHelpersTest.cpp  (+3 more)
tests/dsp_tests/: BBDTest.cpp  BypassTest.cpp  CMakeLists.txt  ConvolutionTest.cpp  GainTest.cpp  ModalFilterTest.cpp  NoiseTest.cpp  NthOrderFilterTest.cpp  OmegaTest.cpp  PannerTest.cpp  PitchShiftTest.cpp  RTypeTest.cpp  ResamplerTest.cpp  SIMDComplexTest.cpp  SIMDSmoothedValueTest.cpp  SIMDUtilsTest.cpp  ShelfFilterTest.cpp  SineTest.cpp  WDFPerf.cpp  WDFTest.cpp
tests/gui_tests/: CMakeLists.txt  GUITest.cpp  LNFAllocatorTest.cpp  PresetsCompTest.cpp
tests/music_tests/: CMakeLists.txt
tests/plugin_tests/: CMakeLists.txt
tests/static_tests/: BypassMismatchedLatencyTypes_fail.cpp  CMakeLists.txt  ConstexprMath_pass.cpp  CorrectContainers_pass.cpp  HasMemberMethodTest_pass.cpp  HasMemberTest_pass.cpp  HasStaticMemberTest_pass.cpp  HasStaticMethodTest_pass.cpp  LanczosKernel4_pass.cpp  LanczosKernel5_fail.cpp  ModFilterHighOrder_fail.cpp  ModFilterLowOrder_pass.cpp  PluginBaseAddParams_pass.cpp  PluginBaseNoAddParams_fail.cpp  SOSFilterEven_pass.cpp  SOSFilterOdd_fail.cpp  SoftClipperBadOrder_fail.cpp
tests/test_utils/: CatchTestRunner.cpp  CatchUtils.h  CodeQuality.cpp  DummyPlugin.h  JUCETestRunner.cpp  TimedUnitTest.h  test_utils.h
tests/utils_tests/: PluginBaseTest.cpp  PluginLoggerTest.cpp  PresetManagerTest.cpp  PresetTest.cpp  VersionUtilsTest.cpp  test_preset.preset
tests/wdf_standalone_test/: CMakeLists.txt  wdf_standalone_test.cpp
(+1133 files in other folders)
