add_subdirectory(chowdsp_dsp_data_structures_test)
add_subdirectory(chowdsp_dsp_juce_test)
add_subdirectory(chowdsp_dsp_utils_test)
add_subdirectory(chowdsp_filters_test)
add_subdirectory(chowdsp_math_test)
add_subdirectory(chowdsp_simd_test)
add_subdirectory(chowdsp_sources_test)
add_subdirectory(chowdsp_waveshapers_test)
